mulighed for at spille et bræt, ændret så den returnerer rigtig respons
