# server/Service/DTO/Game/GameUserPlayResponse.cs
@@ -1,0 +1,7 @@
+﻿namespace Service.DTO.Game;
+
+public class GameUserPlayResponse
+{
+    public decimal TotalPrice { get; set; }
+    public decimal NewBalance { get; set; }
+}
