# server/Service/Services/Game/GameService.cs
@@ -13,22 +13,25 @@ public interface IGameService
 {
     Task<Result<GameDto>> GetGameByIdAsync(Guid gameId);
     Task<Result<GameDto>> GetCurrentGame();
-    Task<Result<bool>> PlayGameAsync(Guid userId, Guid gameId, GameUserPlayRequest request);
+    Task<Result<GameUserPlayResponse>> PlayGameAsync(Guid userId, Guid gameId, GameUserPlayRequest request);
 }
 
 public class GameService(AppDbContext context, IUserService userService, IUserBalanceService balanceService) : IGameService
 {
     public async Task<Result<GameDto>> GetGameByIdAsync(Guid gameId)
     {
+        // find et spil ud fra game id
         var game = await context.Games.FindAsync(gameId);
         if (game == null)
             return Result<GameDto>.NotFound("game", "Game not found.");
 
+        // returner spillet
         return Result<GameDto>.Ok(GameDto.FromDatabase(game));
     }
     
     public async Task<Result<GameDto>> GetCurrentGame()
     {
+        // find det aktive spil
         var game = await context.Games
             .FirstOrDefaultAsync(g => g.Active);
 
@@ -45,6 +48,7 @@ public class GameService(AppDbContext context, IUserService userService, IUserBa
     {
         var playId = Guid.NewGuid();
 
+        // opret et nyt spil
         var gamePlay = new GamePlay
         {
             Id = playId,
@@ -53,6 +57,7 @@ public class GameService(AppDbContext context, IUserService userService, IUserBa
             CreatedAt = DateTime.UtcNow
         };
 
+        // tilføj de valgte numre til spillet i en anden tabel
         foreach (var number in numbers)
         {
             gamePlay.GamePlaysNumbers.Add(new GamePlaysNumber
@@ -65,7 +70,7 @@ public class GameService(AppDbContext context, IUserService userService, IUserBa
         return gamePlay;
     }
 
-    public async Task<Result<bool>> PlayGameAsync(Guid userId, Guid gameId, GameUserPlayRequest request)
+    public async Task<Result<GameUserPlayResponse>> PlayGameAsync(Guid userId, Guid gameId, GameUserPlayRequest request)
     {
         // MEGET vigtig, da vi skal sørge for ingen andre transaktioner kan ændre i balancen
         await using var tx = await context.Database.BeginTransactionAsync(
@@ -73,14 +78,17 @@ public class GameService(AppDbContext context, IUserService userService, IUserBa
 
         try
         {
+            // tjek om brugeren findes
             var userResult = await userService.GetByIdAsync(userId);
             if (!userResult.Success || userResult.Value == null)
-                return Result<bool>.FromResult(userResult);
+                return Result<GameUserPlayResponse>.FromResult(userResult);
 
+            // tjek om spillet findes
             var gameResult = await GetGameByIdAsync(gameId);
             if (!gameResult.Success)
-                return Result<bool>.FromResult(gameResult);
+                return Result<GameUserPlayResponse>.FromResult(gameResult);
 
+            // beregn pris for brættet
             var fieldCount = request.Numbers.Count;
             var boardPrice = GamePricing.CalculateBoardPrice(fieldCount);
 
@@ -89,10 +97,10 @@ public class GameService(AppDbContext context, IUserService userService, IUserBa
                 .SumAsync(x => x.Amount);
 
             var totalPrice = boardPrice * request.Amount;
-
             if (balance < totalPrice)
-                return Result<bool>.Conflict("balance", "Insufficient balance to play this board.");
+                return Result<GameUserPlayResponse>.Conflict("balance", "Insufficient balance to play this board.");
 
+            // opret spillet og træk beløbet fra brugerens balance
             for (var i = 0; i < request.Amount; i++)
             {
                 var gamePlay = CreateGamePlay(userId, gameId, request.Numbers);
@@ -100,16 +108,26 @@ public class GameService(AppDbContext context, IUserService userService, IUserBa
                 await balanceService.AddPlayAsync(userId, gamePlay.Id, boardPrice);
                 context.GamePlays.Add(gamePlay);
             }
-
+            
+            // gem ændringerne og commit transaktionen
             await context.SaveChangesAsync();
             await tx.CommitAsync();
 
-            return Result<bool>.Ok(true);
+            var newBalance = await context.UsersBalances
+                .Where(x => x.UserId == userId)
+                .SumAsync(x => x.Amount);
+
+            
+            return Result<GameUserPlayResponse>.Ok(new GameUserPlayResponse
+            {
+                TotalPrice = totalPrice,
+                NewBalance = newBalance
+            });
         }
         catch
         {
             await tx.RollbackAsync();
-            throw;
+            return Result<GameUserPlayResponse>.InternalError("An error occurred while processing the game play.");
         }
     }
 }
